--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "discord.js": "^11.0.0",
     "node-opus": "^0.2.1",
+    "ffmpeg": "0.0.4",
     "ytdl-core": "github:fent/node-ytdl-core#master"
   },
   "author": "DCH/TarKyo",
