--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "discord.js": "^11.0.0",
     "node-opus": "^0.2.1",
-    "ffmpeg": "3.4.2",
-    "ytdl-core": "github:fent/node-ytdl-core#master"
+    "ffmpeg": "0.0.4",
+    "ytdl-core": "^0.7.24"
   },
   "author": "DCH/TarKyo",
   "license": "MIT"
