--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "discord.js": "^11.0.0",
+    "ffmpeg": "0.0.4",
     "node-opus": "^0.2.1",
-    "ffmpeg": "^0.0.4",
     "ytdl-core": "^0.7.24"
   },
   "author": "DCH/TarKyo",
