--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "discord.js": "^11.0.0",
     "node-opus": "^0.2.1",
-    "FFMPEG": "0.0.4",
+    "ffmpeg": "0.0.4",
     "ytdl-core": "^0.7.24"
   },
   "author": "DCH/TarKyo",
