--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -11,6 +11,7 @@
     "discord.js": "^11.0.0",
     "node-opus": "^0.2.1",
     "ffmpeg": "0.0.4",
+    "ffmpeg-binaries": "3.2.2-3"
     "ytdl-core": "^0.7.24"
   },
   "author": "DCH/TarKyo",
