--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -12,6 +12,7 @@
     "node-opus": "^0.2.1",
     "ffmpeg": "0.0.4",
     "ytdl-core": "^0.7.24",
+    "ffmpeg-binaries": "^3.2.2-3",
     "request": "^2.79.0"
   },
   "author": "DCH/TarKyo",
