--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -2,19 +2,19 @@
   "name": "dchmusique",
   "version": "1.0.0",
   "description": "dchmusique",
-  "main": "Index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node Index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "discord.js": "^11.0.0",
+    "ffmepg": "0.0.2-security",
+    "forever": "^0.15.3",
     "node-opus": "^0.2.1",
-    "ffmpeg": "0.0.4",
-    "ytdl-core": "^0.7.24",
-    "ffmpeg-binaries": "^3.2.2-3",
-    "request": "^2.79.0"
+    "opusscript": "0.0.6",
+    "ytdl-core": "github:fent/node-ytdl-core#master"
   },
-  "author": "DCH/TarKyo",
+  "author": "TarKyo",
   "license": "MIT"
 }
