--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -2,7 +2,7 @@
   "name": "dchmusique",
   "version": "1.0.0",
   "description": "dchmusique",
-  "main": "server.js",
+  "main": "Index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
