--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -11,6 +11,7 @@
     "discord.js": "^11.0.0",
     "forever": "^0.15.3",
     "node-opus": "^0.2.1",
+    "ffmepg": "0.0.2-security",
     "opusscript": "0.0.6",
     "ytdl-core": "github:fent/node-ytdl-core#master"
   },
