--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -12,6 +12,7 @@
     "forever": "^0.15.3",
     "node-opus": "^0.2.1",
     "ffmpeg": "0.0.4",
+    "request": "^2.85.0",
     "opusscript": "0.0.6",
     "ytdl-core": "github:fent/node-ytdl-core#master"
   },
