--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -5,16 +5,16 @@
   "main": "Index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node Index.js"
   },
   "dependencies": {
-    "discord.js": "^11.0.0",
+    "discord.js" : "11.0.0",
+    "ytdl-core" :  "github:fent/node-ytdl-core#master",
+    "node-opus" : "^0.2.1",
     "forever": "^0.15.3",
-    "node-opus": "^0.2.1",
     "request": "^2.85.0",
-    "opusscript": "0.0.6",
-    "ytdl-core": "github:fent/node-ytdl-core#master"
+    "opusscript": "0.0.6"
   },
-  "author": "TarKyo",
+  "author": "BDISTIN",
   "license": "MIT"
 }
