--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "discord.js" : "11.0.0",
     "ytdl-core" :  "github:fent/node-ytdl-core#master",
+    "ffmepg": "0.0.2-security",
     "node-opus" : "^0.2.1",
     "forever": "^0.15.3",
     "request": "^2.85.0",
