--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -11,7 +11,7 @@
     "discord.js" : "11.0.0",
     "ytdl-core" :  "github:fent/node-ytdl-core#master",
     "node-opus" : "^0.2.1",
-    "ffmepg": "0.0.2-security",
+    "ffmepg": "0.0.4",
     "forever": "^0.15.3",
     "request": "^2.85.0",
     "opusscript": "0.0.6"
