--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -8,8 +8,11 @@
     "start": "node Index.js"
   },
   "dependencies": {
-    "discord.js": "11.0.0",
+    "discord.js": "^11.0.0",
+    "ffmepg": "0.0.2-security",
+    "forever": "^0.15.3",
     "node-opus": "^0.2.1",
+    "opusscript": "0.0.6",
     "ytdl-core": "github:fent/node-ytdl-core#master"
   },
   "author": "BDISTIN",
