--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "discord.js": "^11.0.0",
-    "ffmepg": "0.0.2",
+    "ffmepg": "0.0.2-security",
     "forever": "^0.15.3",
     "node-opus": "^0.2.1",
     "opusscript": "0.0.6",
