--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "discord.js": "^11.0.0",
+    "ffmpeg"; "0.0.4"
     "forever": "^0.15.3",
     "node-opus": "^0.2.1",
     "opusscript": "0.0.6",
