--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -9,7 +9,7 @@
     "start": "node Index.js"
   },
   "dependencies": {
-    "discord.js": "^11.0.0",
+    "discord.js": "11.0.0",
     "forever": "^0.15.3",
     "node-opus": "^0.2.1",
     "request": "^2.85.0",
