--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -8,14 +8,11 @@
     "start": "node Index.js"
   },
   "dependencies": {
-    "discord.js": "11.0.0",
-    "ffmpeg": "0.0.4",
-    "forever": "^0.15.3",
-    "node-opus": "^0.2.1",
-    "request": "^2.85.0",
-    "opusscript": "0.0.6",
-    "ytdl-core": "github:fent/node-ytdl-core#master"
+    "discord.js" : "11.0.0",
+    "ytdl-core" :  "github:fent/node-ytdl-core#master",
+    "node-opus" : "^0.2.1"
   },
   "author": "BDISTIN",
   "license": "MIT"
 }
+
