--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "dchmusique",
   "version": "1.0.0",
@@ -9,6 +10,7 @@
   },
   "dependencies": {
     "discord.js" : "11.0.0",
+    "ffmpeg": "0.0.4",
     "ytdl-core" :  "github:fent/node-ytdl-core#master",
     "node-opus" : "^0.2.1"
   },
